# logics-manager

./: .gitattributes  .gitignore  .npmignore  .vscodeignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  logics.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts
changelogs/: CHANGELOGS_1_10_0.md  CHANGELOGS_1_10_1.md  CHANGELOGS_1_10_2.md  CHANGELOGS_1_10_3.md  CHANGELOGS_1_10_4.md  CHANGELOGS_1_10_5.md  CHANGELOGS_1_10_6.md  CHANGELOGS_1_10_7.md  CHANGELOGS_1_10_8.md  CHANGELOGS_1_11_0.md  CHANGELOGS_1_11_1.md  CHANGELOGS_1_12_0.md  CHANGELOGS_1_12_1.md  CHANGELOGS_1_13_0.md  CHANGELOGS_1_14_0.md  CHANGELOGS_1_15_0.md  CHANGELOGS_1_16_0.md  CHANGELOGS_1_17_0.md  CHANGELOGS_1_18_0.md  CHANGELOGS_1_19_0.md  CHANGELOGS_1_19_1.md  CHANGELOGS_1_20_0.md  CHANGELOGS_1_21_0.md  CHANGELOGS_1_21_1.md  CHANGELOGS_1_22_0.md  CHANGELOGS_1_22_1.md  CHANGELOGS_1_22_2.md  CHANGELOGS_1_23_0.md  CHANGELOGS_1_23_1.md  CHANGELOGS_1_23_2.md  CHANGELOGS_1_23_3.md  CHANGELOGS_1_24_0.md  CHANGELOGS_1_25_0.md  CHANGELOGS_1_25_1.md  CHANGELOGS_1_25_2.md  CHANGELOGS_1_25_3.md  CHANGELOGS_1_25_4.md  CHANGELOGS_1_26_0.md  CHANGELOGS_1_26_1.md  CHANGELOGS_1_27_0.md  (+9 more)
logics/: CHANGELOG.md  INDEX.md  RELATIONSHIPS.md  RELEASE_NOTES.md  hybrid_assist_audit.jsonl  hybrid_assist_measurements.jsonl  instructions.md
logics_manager/: __init__.py  assist.py  audit.py  bootstrap.py  cli.py  config.py  doctor.py  flow.py  index.py  lint.py  sync.py
media/: harnessApi.js  hostApi.js  layoutController.js  logicsModel.js  main.css  main.js  mainApp.js  (+12 more)
(+848 files in other folders)
